# osmos

./: .gitignore  Cargo.toml
osmos-core/: Cargo.toml
osmos-core/src/: cell.rs  lib.rs
osmos-sim/: Cargo.toml
osmos-sim/src/: lib.rs  object.rs  simulator.rs
osmos-wasm/: Cargo.toml
osmos-wasm/src/: lib.rs
osmos-web/: main.js  package-lock.json  package.json  vite.config.js
